--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "deploy": "bash deploy.sh",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
